# uni-agent

./: LICENSE  README.md
agent/: .gitignore  chainlit.md  pyproject.toml  run_agent.sh
agent/src/agent/: agent.py  app.py  prompts.py  tools.py
agent/src/application/: app.py
dataset-generator/: pyproject.toml
dataset-generator/src/questions-generator/: main.py
labeling-tool/: requirements.txt
labeling-tool/app/: app.py
labeling-tool/app/datasets/: test-eval-dataset-FINAL.json
labeling-tool/app/static/: app.js  style.css
labeling-tool/app/templates/: 404.html  _file_content.html  base.html  dataset.html  index.html  preview_panel.html  question_form.html
mcp-servers/faculty-mcp-server/: .gitignore  pom.xml
mcp-servers/faculty-mcp-server/src/main/resources/: application.yml  log4j2.xml
mcp-servers/faculty-mcp-server/src/test/resources/: application-benchmark.yml
mcp-servers/faculty-mcp-server/src/test/resources/benchmark/: dataset.json
mcp-servers/faculty-mcp-server/src/test/resources/semantic-search-benchmark/: questions.json
metrics/: README.md  semantic_search-recusrive_splitter-chunk_size_256-overlapping_0.md  semantic_search-recusrive_splitter-chunk_size_256-overlapping_15%.md  semantic_search-recusrive_splitter-chunk_size_384-overlapping_0.md  semantic_search-recusrive_splitter-chunk_size_384-overlapping_15%.md  semantic_search-recusrive_splitter-chunk_size_512-overlapping_0.md  semantic_search-recusrive_splitter-chunk_size_512-overlapping_15%.md
test-dataset/: uni-agent-questions.json
(+43 files in other folders)
