[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.0.1"
description = "LLM orchestration and agentic logic"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-groq",
    "langgraph",
    "chainlit"
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]