[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset-generator"
version = "0.0.1"
description = "Questions generator for test documents"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-groq",
    "langchain-google-genai",
    "ragas",
    "docx2txt",
    "pymupdf",
    "rapidfuzz"
]

[tool.hatch.build.targets.wheel]
packages = ["src/questions-generator"]